--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@beng.extrahop/extrahop-nodejs",
+  "name": "extrahop-nodejs",
   "version": "1.0.0",
-  "description": "ExtraHop API Wrapper",
+  "description": "Wrapper for ExtraHop REST API",
   "main": "index.js",
   "dependencies": {
     "colors": "^1.3.1",
@@ -12,24 +12,27 @@
     "nedb": "^1.8.0",
     "sync-request": "^6.1.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/beng-extrahop/extrahop-nodejs.git"
-  },
+  "devDependencies": {},
   "scripts": {
     "start": "NODE_OPTIONS='--max-old-space-size=4096' node index.js --use_strict",
-    "test": "node index.test.js --use_strict",
-    "mocha": "mocha"
+    "test": "node index.test.js --use_strict"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/beng-extrahop/extrahop-nodejs.git"
+  },
+  "keywords": [
+    "extrahop",
+    "extrahop-nodejs"
+  ],
   "author": "Ben Gibson",
   "license": "ISC",
   "directories": {
     "example": "examples",
     "test": "test"
   },
-  "devDependencies": {},
-  "keywords": [
-    "extrahop",
-    "extrahop-nodejs"
-  ]
+  "bugs": {
+    "url": "https://github.com/beng-extrahop/extrahop-nodejs/issues"
+  },
+  "homepage": "https://github.com/beng-extrahop/extrahop-nodejs#readme"
 }
