--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Wrapper for ExtraHop REST API",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.19.0",
     "colors": "^1.3.1",
     "fast-csv": "^3.4.0",
     "json2csv": "^4.5.4",
@@ -12,10 +13,9 @@
     "nedb": "^1.8.0",
     "sync-request": "^6.1.0"
   },
-  "devDependencies": {},
-  "scripts": {
-    "start": "NODE_OPTIONS='--max-old-space-size=4096' node index.js --use_strict",
-    "test": "node index.test.js --use_strict"
+  "devDependencies": {
+    "eslint": "^6.6.0",
+    "eslint-plugin-vue": "^6.0.0"
   },
   "repository": {
     "type": "git",
