--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "extrahop-nodejs",
-  "version": "1.3.17",
+  "version": "1.3.19",
   "description": "Wrapper for ExtraHop REST API",
   "main": "index.js",
   "dependencies": {
     "axios": "^0.19.0",
     "colors": "^1.3.1",
     "fast-csv": "^3.4.0",
+    "json2csv": "^4.5.4",
     "moment-timezone": "^0.5.27",
     "nedb": "^1.8.0",
     "sync-request": "^6.1.0"
