--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "extrahop-nodejs",
-  "version": "1.3.21",
+  "version": "1.3.23",
   "description": "Wrapper for ExtraHop REST API",
   "main": "index.js",
   "dependencies": {
@@ -13,8 +13,7 @@
     "sync-request": "^6.1.0"
   },
   "devDependencies": {
-    "eslint": "^6.6.0",
-    "eslint-plugin-vue": "^6.0.0"
+    "eslint": "^6.6.0"
   },
   "repository": {
     "type": "git",
