--- a/.eslintrc
+++ b/.eslintrc
@@ -4,22 +4,34 @@
     "es6": true,
     "node": true
   },
-  "extends": "eslint:recommended",
+  "extends": [
+    "eslint:recommended",
+    "plugin:prettier/recommended"
+  ],
   "globals": {
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
   },
-  "parser": "babel-eslint",
   "parserOptions": {
-    "ecmaVersion": 2018,
-    "sourceType": "module",
-    "allowImportExportEverywhere": false,
-    "codeFrame": true
+    "ecmaVersion": 2018
   },
+  "plugins": [
+    "prettier"
+  ],
   "rules": {
-    "quotes": ["error", "single"],
-    "indent": ["error", 2],
-    "linebreak-style": ["error", "unix"],
-    "semi": ["error", "always"]
+    "no-console": 0,
+    "no-useless-constructor": 2,
+    "prettier/prettier": [
+      "error",
+      {
+        "trailingComma": "none",
+        "singleQuote": true,
+        "printWidth": 112,
+        "tabWidth": 2,
+        "quoteProps": "as-needed",
+        "bracketSpacing": true,
+        "arrowParens": "avoid"
+      }
+    ]
   }
 }
