--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,7 @@
   },
   "extends": [
     "eslint:recommended",
-    "plugin:prettier/recommended"
+    "plugin:node/recommended"
   ],
   "globals": {
     "Atomics": "readonly",
@@ -15,23 +15,33 @@
   "parserOptions": {
     "ecmaVersion": 2018
   },
-  "plugins": [
-    "prettier"
-  ],
   "rules": {
+    "max-len": [
+      "error", { "code": 128, "ignoreTemplateLiterals": true }
+    ],
+    "indent": ["error", 2],
+    "linebreak-style": ["error", "unix"],
+    "quotes": ["error", "single"],
+    "semi": ["error", "always"],
+    "brace-style": [2, "stroustrup", { "allowSingleLine": false }],
     "no-console": 0,
     "no-useless-constructor": 2,
-    "prettier/prettier": [
-      "error",
-      {
-        "trailingComma": "none",
-        "singleQuote": true,
-        "printWidth": 128,
-        "tabWidth": 2,
-        "quoteProps": "as-needed",
-        "bracketSpacing": true,
-        "arrowParens": "avoid"
-      }
-    ]
+    "object-curly-spacing": ["error", "always"],
+    "object-curly-newline": ["error", {
+      "ObjectExpression": "never",
+      "ObjectPattern": { "multiline": false, "minProperties": 9 },
+      "ImportDeclaration": "never",
+      "ExportDeclaration": { "multiline": false, "minProperties": 9 }
+    }],
+    "template-tag-spacing": ["error", "always"],
+    "node/exports-style": ["error", "module.exports"],
+    "node/file-extension-in-import": ["error", "always"],
+    "node/prefer-global/buffer": ["error", "always"],
+    "node/prefer-global/console": ["error", "always"],
+    "node/prefer-global/process": ["error", "always"],
+    "node/prefer-global/url-search-params": ["error", "always"],
+    "node/prefer-global/url": ["error", "always"],
+    "node/prefer-promises/dns": "error",
+    "node/prefer-promises/fs": "error"
   }
 }
