--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
   },
   "devDependencies": {
     "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.3.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "prettier": "^1.19.1"
+    "eslint-plugin-node": "^10.0.0"
   },
   "repository": {
     "type": "git",
@@ -27,10 +25,6 @@
     "extrahop-nodejs"
   ],
   "author": "Ben Gibson",
-  "scripts": {
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
-  },
   "license": "ISC",
   "directories": {
     "example": "examples",
