--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "eslint": "^5.16.0",
+    "eslint-config-eslint": "^5.0.1",
     "eslint-plugin-node": "^10.0.0"
   },
   "repository": {
