Rule updates and cleanup

--- a/.eslintrc
+++ b/.eslintrc
@@ -26,8 +26,8 @@
     "eqeqeq": [1, "always", {"null": "ignore"}],
     "func-style": [2, "declaration", { "allowArrowFunctions": true }],
     "no-underscore-dangle": 0,
-    "class-methods-use-this": [2, { "exceptMethods": ["build", "saveToCSV", "printSearchInfo", "getPageCount", "filter", "parse", "generateId"] }],
-    "camelcase": [1, { "properties": "never", "ignoreDestructuring": true, "allow": ["context_ttl"] }],
+    "class-methods-use-this": 0,
+    "camelcase": 0,
     "indent": [2, 2],
     "linebreak-style": [2, "unix"],
     "quotes": [2, "single"],
