--- a/.eslintrc
+++ b/.eslintrc
@@ -19,7 +19,7 @@
   },
   "rules": {
     "strict": "off",
-    "max-len": ["error", { "code": 128, "ignoreTemplateLiterals": true, "ignoreTrailingComments": true }],
+    "max-len": ["warn", { "code": 128, "ignoreTemplateLiterals": true, "ignoreTrailingComments": true }],
     "padding-line-between-statements": [
       "error",
       { "blankLine": "always", "prev": "*", "next": ["block-like", "function"] },
