--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "extrahop-nodejs",
-  "version": "1.3.35",
+  "version": "1.3.36",
   "description": "Wrapper for ExtraHop REST API",
   "main": "index.js",
   "dependencies": {
@@ -32,10 +32,7 @@
   "scripts": {
     "babel": "npx babel src --out-dir lib --presets=es2015 --ignore 'src/**/*.bkp.js','src/**/*.test.js','src/**/*.bkp' --source-maps"
   },
-  "presets": [
-    "@babel/preset-env",
-    "@babel/preset-typescript"
-  ],
+  "presets": ["@babel/preset-env", "@babel/preset-typescript"],
   "plugins": [
     "@babel/plugin-proposal-class-properties",
     "@babel/plugin-proposal-object-rest-spread"
