--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,7 @@
         "node": true
     },
     "extends": [
-        "standard"
+        "airbnb-base"
     ],
     "globals": {
         "Atomics": "readonly",
