--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Wrapper for ExtraHop REST API",
   "main": "index.js",
   "dependencies": {
-    "axios": "^0.19.0",
     "colors": "^1.3.1",
     "fast-csv": "^3.4.0",
     "json2csv": "^4.5.4",
@@ -14,13 +13,13 @@
   },
   "devDependencies": {
     "eslint": "^7.7.0",
+    "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-eslint": "^5.0.1",
     "eslint-config-problems": "^3.0.1",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint-plugin-promise": "^4.2.1"
   },
   "repository": {
     "type": "git",
