--- a/package.json
+++ b/package.json
@@ -1,43 +1,46 @@
 {
-  "name": "extrahop-nodejs",
-  "version": "1.7.6",
-  "description": "Wrapper for ExtraHop REST API",
-  "main": "index.js",
-  "dependencies": {
-    "colors": "^1.3.1",
-    "fast-csv": "^4.3.6",
-    "json2csv": "^4.5.4",
-    "moment-timezone": "^0.5.27",
-    "nedb": "^1.8.0",
-    "sync-request": "^6.1.0"
-  },
-  "devDependencies": {
-    "eslint": "^7.15.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "supertest": "^4.0.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/beng-extrahop/extrahop-nodejs.git"
-  },
-  "keywords": [
-    "extrahop",
-    "extrahop-nodejs"
-  ],
-  "scripts": {
-    "test": "jest"
-  },
-  "author": "Ben Gibson",
-  "license": "ISC",
-  "directories": {
-    "example": "examples",
-    "test": "test"
-  },
-  "bugs": {
-    "url": "https://github.com/beng-extrahop/extrahop-nodejs/issues"
-  },
-  "homepage": "https://github.com/beng-extrahop/extrahop-nodejs#readme"
+	"name": "extrahop-nodejs",
+	"version": "1.7.6",
+	"description": "Wrapper for ExtraHop REST API",
+	"main": "index.js",
+	"dependencies": {
+		"colors": "^1.3.1",
+		"fast-csv": "^4.3.6",
+		"json2csv": "^4.5.4",
+		"moment-timezone": "^0.5.27",
+		"nedb": "^1.8.0",
+		"sync-request": "^6.1.0"
+	},
+	"devDependencies": {
+		"eslint": "^7.15.0",
+		"eslint-config-prettier": "^7.0.0",
+		"eslint-config-standard": "^16.0.2",
+		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-prettier": "^3.3.0",
+		"eslint-plugin-promise": "^4.2.1",
+		"prettier": "^2.2.1",
+		"supertest": "^4.0.2"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/beng-extrahop/extrahop-nodejs.git"
+	},
+	"keywords": [
+		"extrahop",
+		"extrahop-nodejs"
+	],
+	"scripts": {
+		"test": "jest"
+	},
+	"author": "Ben Gibson",
+	"license": "ISC",
+	"directories": {
+		"example": "examples",
+		"test": "test"
+	},
+	"bugs": {
+		"url": "https://github.com/beng-extrahop/extrahop-nodejs/issues"
+	},
+	"homepage": "https://github.com/beng-extrahop/extrahop-nodejs#readme"
 }
