--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,23 +13,6 @@
 		"linebreak-style": ["error", "unix"],
 		"quotes": ["error", "single"],
 		"semi": ["error", "always"],
-		"max-len": ["error", { "code": 120, "ignoreUrls": true }],
-		"max-attributes-per-line": "off",
-		"lines-around-comment": [
-			"error",
-			{
-				"beforeBlockComment": true,
-				"afterBlockComment": true,
-				"beforeLineComment": true,
-				"afterLineComment": false,
-				"allowBlockStart": true,
-				"allowBlockEnd": true,
-				"allowObjectStart": true,
-				"allowObjectEnd": true,
-				"allowArrayStart": true,
-				"allowArrayEnd": true
-			}
-		],
 		"prettier/prettier": [
 			"error",
 			{
@@ -41,6 +24,23 @@
 			},
 			{
 				"usePrettierrc": false
+			}
+		],
+		"max-len": ["error", { "code": 120, "ignoreUrls": true }],
+		"max-attributes-per-line": "off",
+		"lines-around-comment": [
+			"error",
+			{
+				"beforeBlockComment": true,
+				"afterBlockComment": true,
+				"beforeLineComment": false,
+				"afterLineComment": false,
+				"allowBlockStart": true,
+				"allowBlockEnd": true,
+				"allowObjectStart": true,
+				"allowObjectEnd": true,
+				"allowArrayStart": true,
+				"allowArrayEnd": true
 			}
 		]
 	},
